--- a/visualization/script/style.css
+++ b/visualization/script/style.css
@@ -16,11 +16,11 @@
 
 #map {
   height: 100%;
-  1position: absolute;
-  1top: 0;
-  1bottom: 0;
-  1right: 0;
-  1left: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 #info-pane {
@@ -37,7 +37,7 @@
   top: 10px;
   right: 350px;
   z-index: 100;
-  1float: right;
+  float: right;
   padding-left: 15px;
   padding-right: 15px;
   border: solid 1px;
